--- a/package.json
+++ b/package.json
@@ -1,19 +1,6 @@
 {
-  "name": "angular",
+  "name": "pro-clock",
   "version": "0.0.0",
-  "private": true,
-  "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "2",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
-  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,18 +9,46 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "^7.3.3",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.3",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "angular-calendar": "^0.27.2",
+    "angularx-flatpickr": "^6.1.0",
+    "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
+    "flatpickr": "^4.5.7",
+    "moment": "^2.24.0",
+    "ng2-search-filter": "^0.4.7",
+    "ngx-order-pipe": "^2.0.2",
+    "ngx-pagination": "^3.2.1",
+    "ngx-toastr": "^10.0.4",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
+  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "~7.3.2",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
@@ -41,6 +56,12 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.2.2",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
